syntax = "proto3";

package main;

option go_package = "./proto";

// 添加运费模版
message AddFeightTemplateReq {
  int32 charge_type = 1; //计费类型:0->按重量；1->按件数
  int64 continue_fee = 2; //
  int64 continue_weight = 3; //
  string dest = 4; //目的地（省、市）
  int64 first_fee = 5; //首费（元）
  int64 first_weight = 6; //首重kg
  int64 id = 7; //
  string name = 8; //运费模版名称

}

message AddFeightTemplateResp {
  string pong = 1;
}

// 删除运费模版
message DeleteFeightTemplateReq {
  repeated int64 ids = 1;
}

message DeleteFeightTemplateResp {
  string pong = 1;
}

// 更新运费模版
message UpdateFeightTemplateReq {
  int32 charge_type = 1; //计费类型:0->按重量；1->按件数
  int64 continue_fee = 2; //
  int64 continue_weight = 3; //
  string dest = 4; //目的地（省、市）
  int64 first_fee = 5; //首费（元）
  int64 first_weight = 6; //首重kg
  int64 id = 7; //
  string name = 8; //运费模版名称

}

message UpdateFeightTemplateResp {
  string pong = 1;
}


// 查询运费模版详情
message QueryFeightTemplateDetailReq {
    int64 id = 1;
}

message QueryFeightTemplateDetailResp {
  int32 charge_type = 1; //计费类型:0->按重量；1->按件数
  int64 continue_fee = 2; //
  int64 continue_weight = 3; //
  string dest = 4; //目的地（省、市）
  int64 first_fee = 5; //首费（元）
  int64 first_weight = 6; //首重kg
  int64 id = 7; //
  string name = 8; //运费模版名称

}

// 分页查询运费模版列表
message QueryFeightTemplateListReq {
 int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
}

message FeightTemplateListData {
  int32 charge_type = 1; //计费类型:0->按重量；1->按件数
  int64 continue_fee = 2; //
  int64 continue_weight = 3; //
  string dest = 4; //目的地（省、市）
  int64 first_fee = 5; //首费（元）
  int64 first_weight = 6; //首重kg
  int64 id = 7; //
  string name = 8; //运费模版名称

}

message QueryFeightTemplateListResp {
  int64 total = 1;
  repeated  FeightTemplateListData list = 2;
}

// 运费模版
service FeightTemplateService {
  // 添加运费模版
  rpc AddFeightTemplate(AddFeightTemplateReq) returns (AddFeightTemplateResp){}
  // 删除运费模版
  rpc DeleteFeightTemplate(DeleteFeightTemplateReq) returns (DeleteFeightTemplateResp){}
  // 更新运费模版
  rpc UpdateFeightTemplate(UpdateFeightTemplateReq) returns (UpdateFeightTemplateResp ){}
  // 查询运费模版详情
   rpc QueryFeightTemplateDetail(QueryFeightTemplateDetailReq) returns (QueryFeightTemplateDetailResp){}
  // 查询运费模版列表
  rpc QueryFeightTemplateList(QueryFeightTemplateListReq) returns (QueryFeightTemplateListResp){}


}
