syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品属性分类表
message AddProductAttributeCategoryReq {
  string name = 1; //

}

message AddProductAttributeCategoryResp {
  string pong = 1;
}

// 删除产品属性分类表
message DeleteProductAttributeCategoryReq {
  repeated int64 ids = 1;
}

message DeleteProductAttributeCategoryResp {
  string pong = 1;
}

// 更新产品属性分类表
message UpdateProductAttributeCategoryReq {
  int32 attribute_count = 1; //属性数量
  int64 id = 2; //
  string name = 3; //
  int32 param_count = 4; //参数数量

}

message UpdateProductAttributeCategoryResp {
  string pong = 1;
}


// 分页查询产品属性分类表列表
message QueryProductAttributeCategoryListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string name = 3; //

}

message ProductAttributeCategoryListData {
  int32 attribute_count = 1; //属性数量
  int64 id = 2; //
  string name = 3; //
  int32 param_count = 4; //参数数量
  repeated ProductAttributeData ProductAttributeList=5;
}
message ProductAttributeData {
  int32 filter_type = 1; //分类筛选样式：1->普通；1->颜色
  int32 hand_add_status = 2; //是否支持手动新增；0->不支持；1->支持
  int64 id = 3; //
  string input_list = 4; //可选值列表，以逗号隔开
  int32 input_type = 5; //属性录入方式：0->手工录入；1->从列表中选取
  string name = 6; //
  int64 product_attribute_category_id = 7; //
  int32 related_status = 8; //相同属性产品是否关联；0->不关联；1->关联
  int32 search_type = 9; //检索类型；0->不需要进行检索；1->关键字检索；2->范围检索
  int32 select_type = 10; //属性选择类型：0->唯一；1->单选；2->多选
  int32 sort = 11; //排序字段：最高的可以单独上传图片
  int32 type = 12; //属性的类型；0->规格；1->参数

}
message QueryProductAttributeCategoryListResp {
  int64 total = 1;
  repeated  ProductAttributeCategoryListData list = 2;
}

// 产品属性分类表
service ProductAttributeCategoryService {
  // 添加产品属性分类表
  rpc AddProductAttributeCategory(AddProductAttributeCategoryReq) returns (AddProductAttributeCategoryResp){}
  // 删除产品属性分类表
  rpc DeleteProductAttributeCategory(DeleteProductAttributeCategoryReq) returns (DeleteProductAttributeCategoryResp){}
  // 更新产品属性分类表
  rpc UpdateProductAttributeCategory(UpdateProductAttributeCategoryReq) returns (UpdateProductAttributeCategoryResp ){}
  // 查询产品属性分类表列表
  rpc QueryProductAttributeCategoryList(QueryProductAttributeCategoryListReq) returns (QueryProductAttributeCategoryListResp){}

  //获取所有商品属性分类及其下属性
  rpc queryCategoryWithAttrList(QueryProductAttributeCategoryListReq) returns(QueryProductAttributeCategoryListResp);

}
