syntax = "proto3";

package main;

option go_package = "./proto";

// 添加产品满减表(只针对同商品)
message AddProductFullReductionReq {
  int64 full_price = 1; //
  int64 product_id = 2; //
  int64 reduce_price = 3; //

}

message AddProductFullReductionResp {
  string pong = 1;
}

// 删除产品满减表(只针对同商品)
message DeleteProductFullReductionReq {
  repeated int64 ids = 1;
}

message DeleteProductFullReductionResp {
  string pong = 1;
}

// 分页查询产品满减表(只针对同商品)列表
message QueryProductFullReductionListReq {
  int64 product_id = 1; //
}

message ProductFullReductionListData {
  int64 full_price = 1; //
  int64 id = 2; //
  int64 product_id = 3; //
  int64 reduce_price = 4; //

}

message QueryProductFullReductionListResp {
  int64 total = 1;
  repeated  ProductFullReductionListData list = 2;
}

// 产品满减表(只针对同商品)
service ProductFullReductionService {
  // 添加产品满减表(只针对同商品)
  rpc AddProductFullReduction(AddProductFullReductionReq) returns (AddProductFullReductionResp){}
  // 删除产品满减表(只针对同商品)
  rpc DeleteProductFullReduction(DeleteProductFullReductionReq) returns (DeleteProductFullReductionResp){}
  // 查询产品满减表(只针对同商品)列表
  rpc QueryProductFullReductionList(QueryProductFullReductionListReq) returns (QueryProductFullReductionListResp){}


}
