syntax = "proto3";

package main;

option go_package = "./proto";

// 添加
message AddProductOperateLogReq {
  string create_time = 1; //
  int32 gift_point_new = 2; //
  int32 gift_point_old = 3; //赠送的积分
  int32 use_point_limit_old = 4; //
  string operate_man = 5; //操作人
  int64 price_new = 6; //
  int64 price_old = 7; //
  int64 product_id = 8; //
  int64 sale_price_new = 9; //
  int64 sale_price_old = 10; //
  int32 use_point_limit_new = 11; //


}

message AddProductOperateLogResp {
  string pong = 1;
}

// 删除
message DeleteProductOperateLogReq {
  repeated int64 ids = 1;
}

message DeleteProductOperateLogResp {
  string pong = 1;
}

// 查询详情
message QueryProductOperateLogDetailReq {
    int64 id = 1;
}

message QueryProductOperateLogDetailResp {
  string create_time = 1; //
  int32 gift_point_new = 2; //
  int32 gift_point_old = 3; //赠送的积分
  int64 id = 4; //
  string operate_man = 5; //操作人
  int64 price_new = 6; //
  int64 price_old = 7; //
  int64 product_id = 8; //
  int64 sale_price_new = 9; //
  int64 sale_price_old = 10; //
  int32 use_point_limit_new = 11; //
  int32 use_point_limit_old = 12; //

}

// 分页查询列表
message QueryProductOperateLogListReq {
 int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
}

message ProductOperateLogListData {
  string create_time = 1; //
  int32 gift_point_new = 2; //
  int32 gift_point_old = 3; //赠送的积分
  int64 id = 4; //
  string operate_man = 5; //操作人
  int64 price_new = 6; //
  int64 price_old = 7; //
  int64 product_id = 8; //
  int64 sale_price_new = 9; //
  int64 sale_price_old = 10; //
  int32 use_point_limit_new = 11; //
  int32 use_point_limit_old = 12; //

}

message QueryProductOperateLogListResp {
  int64 total = 1;
  repeated  ProductOperateLogListData list = 2;
}

// 
service ProductOperateLogService {
  // 添加
  rpc AddProductOperateLog(AddProductOperateLogReq) returns (AddProductOperateLogResp){}
  // 删除
  rpc DeleteProductOperateLog(DeleteProductOperateLogReq) returns (DeleteProductOperateLogResp){}
  // 查询详情
   rpc QueryProductOperateLogDetail(QueryProductOperateLogDetailReq) returns (QueryProductOperateLogDetailResp){}
  // 查询列表
  rpc QueryProductOperateLogList(QueryProductOperateLogListReq) returns (QueryProductOperateLogListResp){}


}
